10 paskaita - Big Flex ir Grid Task _ Flex start

--- a/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
+++ b/HTML ir CSS/10 paskaita - 12.20 - Grid ir Flex praktika/index.html
@@ -37,7 +37,7 @@
     <section> <!-- GridFlexTASK -->
       <h2>GridFlexTASK</h2>
       <div>
-        <h2>Grid</h2>
+        <h3>Grid</h3>
         <div class="all_20_GridContainer">
           <!-- div*20 -->
           <div></div>
@@ -67,6 +67,53 @@
             <div></div>
             <div></div>
           </div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div>
+        <h3>Flex</h3>
+        <div class="all_20_FlexContainer">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="flex_4">
+            <div class="flex_4_container123">
+              <div class="flex_4_1"></div>
+              <div class="flex_4_2"></div>
+              <div class="flex_4_3"></div>
+            </div>
+            <div class="flex_4_container45678">
+              <div class="flex_4_container45">
+                <div class="flex_4_4"></div>
+                <div class="flex_4_5"></div>
+              </div>
+              <div class="flex_4_6"></div>
+              <div class="flex_4_container78">
+                <div class="flex_4_7"></div>
+                <div class="flex_4_8"></div>
+              </div>
+            </div>
+            <div class="flex_4_container9_10_11">
+              <div class="flex_4_9"></div>
+              <div class="flex_4_10"></div>
+              <div class="flex_4_11"></div>
+            </div>
+          </div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
           <div></div>
