11 paskaita - Responsive Design (mobile first)

--- a/HTML ir CSS/11 paskaita - 12.23 - Responsive Design/index.html
+++ b/HTML ir CSS/11 paskaita - 12.23 - Responsive Design/index.html
@@ -38,7 +38,17 @@
     </section>
     <section> <!-- Mobile First -->
       <h2>Mobile First</h2>
-
+      <p>
+        Mobile First dizaino principas yra tas, kad pradžioje puslapis yra pritaikomas mobiliesiems, o tik po to judama prie kitų ekrano dydžių.<br>
+        Taip yra daroma dėl įvairių priežasčių: daugiau vartotojų naudoja mobiliuosius naršant internete; mažiau vietos informacijai - reikia atvaizduoti svarbiausią; lengviau pridėti turinį, negu atimti...
+      </p>
+      <p>
+        Rašant mobile first media query, būtina naudoti min-width, ne max-width nustatymą.
+      </p>
+      <h4>Keletas straipsnių apie mobile first:</h4>
+      <a href="https://www.invisionapp.com/inside-design/mobile-first-design/" target="_blank">What does mobile-first design mean for digital designers?</a><br>
+      <a href="https://www.bairesdev.com/blog/what-is-mobile-first-css-is-it-necessary/" target="_blank">What Is Mobile-First CSS, and Is It Really Necessary?</a><br>
+      <a href="https://alistapart.com/article/mobile-first-css-is-it-time-for-a-rethink/" target="_blank">Mobile-First CSS: Is It Time for a Rethink?</a>
     </section>
   </main>
   <footer></footer>
