--- a/HTML ir CSS/11 paskaita - 12.23 - Responsive Design/index.html
+++ b/HTML ir CSS/11 paskaita - 12.23 - Responsive Design/index.html
@@ -50,6 +50,12 @@
       <a href="https://www.bairesdev.com/blog/what-is-mobile-first-css-is-it-necessary/" target="_blank">What Is Mobile-First CSS, and Is It Really Necessary?</a><br>
       <a href="https://alistapart.com/article/mobile-first-css-is-it-time-for-a-rethink/" target="_blank">Mobile-First CSS: Is It Time for a Rethink?</a>
     </section>
+    <section id="task2">
+      <div>header</div>
+      <div>main</div>
+      <div>widget</div>
+      <div>footer</div>
+    </section>
   </main>
   <footer></footer>
 </body>
