--- a/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/index.html
+++ b/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/index.html
@@ -47,6 +47,20 @@
     </section>
     <section> <!-- Transition -->
       <h2>Transition</h2>
+      <p>
+        Kontroliuoja stilių perėjimą iš vieno į kitą.<br>
+        Tranzicija dažniausiai yra daroma kai ant elemento užeina pelės kursorius arba kai elementas yra paspaudžiamas.<br>
+        Tranzicijos kitimas vyksta vieną sykį iš vieno stiliaus į kitą stilių ir viskas.
+      </p>
+      <ul>
+        <li>transition-duration: seconds</li>
+        <li>transition-timing-function: timing-function</li>
+        <li>transition-delay: seconds (0s - default)</li>
+        <li>transition-property: style (all - default)</li>
+        <li>transition-behavior: normal(default) | allow-discrete;</li>
+        <li>transition: transition-duration transition-delay transition-timing-function transition-property transition-behavior;</li>
+      </ul>
+      <div class="transitionTest">Transition</div>
     </section>
     <section> <!-- Animation -->
       <h2>Animation</h2>
