13 paskaita - Libraries and Frameworks

--- a/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
+++ b/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
@@ -9,7 +9,7 @@
 <body>
   <header></header>
   <main>
-    <!-- git ir github (short), karkasai, preprocesoriai, prieinamumas -->
+    <!-- git ir github (short), karkasai, preprocesoriai, Units, prieinamumas -->
     <section> <!-- Git ir Github -->
       <h2>Git ir Github</h2>
       <p>
@@ -32,6 +32,53 @@
         </li>
         <li>Pasitikrinti ar teisingai atlika konfigūracija. Terminale panaudoti komandą "git config --global --edit" / Jeigu neveikia komanda - galima nueiti rankiniu būdu iki failo: "C:/Users/Tavo_PC_Vartotojas/.gitconfig"</li>
       </ol>
+    </section>
+    <section> <!-- Libraries ir Frameworks -->
+      <h2>Libraries ir Frameworks</h2>
+      <p>
+        Libraries - kažkieno kito parašytas kodas (kuris nėra originalioje kalboje), kuriuo galite naudotis savo projektuose.<br>
+        Norint naudotis library kodu, reikia tą library prisijungti prie savo projekto panaudojant CDN.<br>
+        Daugelis library veikia tokiu principu, kad jų viduje yra aprašytas kodas, kuriuo tu pats naudojiesi.<br>
+        CSS libraries gali būti <a href="https://github.com/dbohdan/classless-css" target="_blank">ClassLess</a>, kurios stilius suteikinėja tag'ams.
+      </p>
+      <p>
+        Frameworks - kažkieno kito sukurta programa/programų rašymo būdas, kuriuo naudojantis patogiau kurti programas.
+      </p>
+      <h3>CSS Libraries/Frameworks</h3>
+      <ul>
+        <li>Bootstrap</li>
+        <li>Tailwind</li>
+        <li>Bulma</li>
+        <li>UI Kit</li>
+        <li>Materialize</li>
+        <li>Material Design Lite</li>
+        <li>Milligram</li>
+        <li>...</li>
+      </ul>
+      <div class="twoColumns">
+        <div>
+          <h3>Pros</h3>
+          <ul>
+            <li>Pagreitina/palengvina darbą</li>
+            <li>Dirbant komandoje vientisas/tvarkingas kodas</li>
+            <li>Nereikia/labai mažai rašyti CSS</li>
+            <li>Įdiegtas responsiveness</li>
+            <li>...</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Cons</h3>
+          <ul>
+            <li>Neunikalus dizainas</li>
+            <li>Reikia mokintis naudotis biblioteka</li>
+            <li>Sudėtingiau pritaikyti savo stilius (dėl CSS prioritetų)</li>
+            <li>Daug perteklinio/nepanaudoto kodo (užkrauna programą)</li>
+            <li>Nešvarus HTML'as dėl klasių pertekliaus</li>
+            <li>Pasimiršta CSS'as</li>
+            <li>...</li>
+          </ul>
+        </div>
+      </div>
     </section>
   </main>
   <footer></footer>
