--- a/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
+++ b/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
@@ -80,6 +80,26 @@
         </div>
       </div>
     </section>
+    <section> <!-- Proprocesoriai -->
+      <h2>Preprocessors</h2>
+      <p>
+        CSS with superpowers
+      </p>
+      <p>
+        Suteikia galimybę rašyti CSS kodą naujoviškesniu būdu. Jame lengvai ir patogiai galima kurti kintamuosius, nest'inti CSS kodą, rašyti: sąlgas, funkcijas, ciklus, mix'inus ir t.t.
+      </p>
+      <p>
+        Naudojant betkurį CSS preprocesorių, reikia parašytą kodą konvertuoti (kompiliuoti) į paprastą CSS'ą, kurį jau prijungiame prie svetainės.
+      </p>
+      <h3>Preprocesorių sąrašas</h3>
+      <ul>
+        <li>SASS/SCSS</li>
+        <li>LESS</li>
+        <li>Stylus</li>
+        <li>PostCSS</li>
+        <li>...</li>
+      </ul>
+    </section>
   </main>
   <footer></footer>
 </body>
