13 paskaita - Units and Accessibility

--- a/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
+++ b/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/index.html
@@ -100,6 +100,38 @@
         <li>...</li>
       </ul>
     </section>
+    <section> <!-- Units -->
+      <h2>Units</h2>
+      <p>
+        Units - matavimo vienetai, skirti nustatyti elementų dydžius: plotį, aukštį, teksto dydį, tarpus, atitraukimus...
+      </p>
+      <ul>
+        <li>px - pikselis</li>
+        <li>% - pagal tėvinio elemento dydį</li>
+        <li>vw - viewport width - matomos svetainės plotis (100 - visas plotis)</li>
+        <li>vh - viewport height - matomas svetainės aukštis (100 - visas aukštis)</li>
+        <li>rem - root em(ephemeral) - 16px - pagal šakninį nustatymą</li>
+        <li>em - ephemeral - 16px - pagal tėvinio elemento nustatymą</li>
+        <li>...</li>
+      </ul>
+    </section>
+    <section> <!-- Accessibility -->
+      <h2>Accessibility</h2>
+      <h3>Puslapio prieinamumo standartai</h3>
+      <ul>
+        <li>Suvokiamumas (UI/UX)</li>
+        <li>Veikiamumas</li>
+        <li>Suprantamumas (content)</li>
+        <li>Tvirtumas</li>
+      </ul>
+      <h3>Puslapio pritaikymas visiems vartotojams</h3>
+      <p>
+        Skirtingas negalias turintiems žmonėms: klausa, skirtingos kalbos, aklumas, daltonikai...
+      </p>
+      <p>
+        Meta tag'ai ir daugiau info apie juos <a href="https://ahrefs.com/blog/seo-meta-tags/" target="_blank">spausti čia...</a>
+      </p>
+    </section>
   </main>
   <footer></footer>
 </body>
